# AirKeyboardGUI

./: .clang-format  CMakeLists.txt  CMakePresets.json
AirKeyboardGUI/: AirKeyboardGUI.cpp  AirKeyboardGUI.h  AirKeyboardGUI.rc  CMakeLists.txt  app.manifest  config.h  globals.h  resource.h
AirKeyboardGUI/input/: pg2701_cl.txt
AirKeyboardGUI/scripts/: frame_postprocessor.py
AirKeyboardGUI/src/: EventBus.cpp  EventBus.h  LoggingTrigger.cpp  LoggingTrigger.h  ThreadManager.cpp  ThreadManager.h  types.h
AirKeyboardGUI/src/base/: BatchSubscriber.h  Publisher.h  StreamSubscriber.h  Subscriber.h  UIView.h
AirKeyboardGUI/src/capture/: FrameProcessor.cpp  FrameProcessor.cu  FrameProcessor.h  FramePublisher.cpp  FramePublisher.h  KeyEventPublisher.cpp  KeyEventPublisher.h
AirKeyboardGUI/src/logging/: FrameLogger.cpp  FrameLogger.h  FramePostProcessor.cpp  FramePostProcessor.h  KeyEventLogger.cpp  KeyEventLogger.h
AirKeyboardGUI/src/ui/: LiveKeyboardView.cpp  LiveKeyboardView.h  ReactiveChar.h  TextContainer.cpp  TextContainer.h  TextProvider.cpp  TextProvider.h
